@@ -1,1 +1,2 @@
-Do a Linux version for kernels with acls enabled.
+Perhaps ditch native code and parse IO from/to getfacl/setfacl commands
+instead.
